# MyQuantProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/: Api.hpp  Backtester.hpp  DataManager.hpp  MovingAverageCrossoverStrategy.hpp  Strategy.hpp
src/: Api.cpp  Backtester.cpp  DataManager.cpp  MovingAverageCrossoverStrategy.cpp  main.cpp
test/: CMakeLists.txt
